# SPDX-FileCopyrightText: © 2019 The cython-linux-usbmon Authors
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = [
  'setuptools >= 42',
  'wheel',
  'Cython',
  'setuptools_scm[toml]>=3.4',
]

[tool.setuptools_scm]

[tool.black]
line-ngth = 80
target-version = ['py37']

[tool.isort]
line_length = 80
