# SPDX-FileCopyrightText: © 2019 The cython-linux-usbmon Authors
# SPDX-License-Identifier: Apache-2.0

[metadata]
name = cython-linux-usbmon
description = Linux usbmon capture interface
long_description = file: README.md
long_description_content_type = text/markdown
author = Diego Elio Pettenò
author_email = flameeyes@flameeyes.com
license = Apache-2.0
license_file = LICENSE
license_files =
    AUTHORS
    LICENSE
    LICENSES/*
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: System :: Hardware

[options]
packages = find:
install_requires =
    click
    usbmon-tools >= 2.dev
python_requires = ~= 3.7

[options.extras_require]
dev =
    cython
    mypy
    pre-commit
    pytest-mypy
    pytest-timeout>=1.3.0
    pytest>=6.0
    setuptools_scm

[options.package_data]
* = py.typed
linux_usbmon._cython = src/*.pxd

[options.entry_points]
console_scripts =
    cython-usbmon-capture = linux_usbmon.capture:main

[flake8]
max-line-length = 88
# Ignore long line errors, black takes care of them.
extend-ignore = E501
